--- a/J6D8/src/main/resources/application.properties
+++ b/J6D8/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=J6D8;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=J6Store;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=15112002
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
@@ -15,8 +15,8 @@ spring.servlet.multipart.max-file-size=1MB
 #email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tuetritmt41@gmail.com
-spring.mail.password=oiynjbvfcbaklkih
+spring.mail.username=nguyenvantiep15112002@gmail.com
+spring.mail.password=tiep2002
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #google
