--- a/J6D8/src/main/resources/application.properties
+++ b/J6D8/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.main.allow-circular-references=true
 spring.servlet.multipart.max-file-size=1MB
 #email
 #dgdgdgdgdgdgd
+#tergdaf
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=nguyenvantiep15112002@gmail.com
